--- a/main.css
+++ b/main.css
@@ -45,7 +45,6 @@ footer {
 .logo img {
   margin:auto;
   margin-left: 10px;
-  margin-top: 10px;
   height: 45px;
   width: 45px;
 }
@@ -149,8 +148,6 @@ section p {
   color: #1B365C;
   /*margin-bottom: 4px;*/
   font-size: 20px;
-  padding-left: 50px;
-  padding-top: 6px;
 }
 
 .hero {
